knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/Compliance_Rule_Assignments__c.object-meta.xml
<CustomObject>
    <label>Compliance Rule Assignment</label>
    <nameField>
        <displayFormat>CRA-{000000}</displayFormat>
        <label>Compliance Rule Assignments  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Rule Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>