knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
OR(Rule_Effective_End_Date__c &gt; Today(),ISNULL(Rule_Effective_End_Date__c)),
Rule_Effective_Start_Date__c &lt;= Today()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>