knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/Collaboration_Forms__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Forms__c</fullName>
    <label>Collaboration Forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgement of Alternate Physician</fullName>
            </value>
            <value>
                <fullName>Add/Change Alternative Supervisor</fullName>
            </value>
            <value>
                <fullName>Add/Change Primary Supervisor</fullName>
            </value>
            <value>
                <fullName>Addendum to add PA</fullName>
            </value>
            <value>
                <fullName>Adding Alternate Physicians Form</fullName>
            </value>
            <value>
                <fullName>Agr for Phys-Superv Adv Prac Prescr Auth</fullName>
            </value>
            <value>
                <fullName>Alternate Supervising Phys App</fullName>
            </value>
            <value>
                <fullName>Alternate Supervising Physician Form</fullName>
            </value>
            <value>
                <fullName>Alternate Supervising Physician Log</fullName>
            </value>
            <value>
                <fullName>App for Registration as Superv Physician</fullName>
            </value>
            <value>
                <fullName>Application for Approval of a Supervising Relationship with a Licensed Physician or NP</fullName>
            </value>
            <value>
                <fullName>Application for Controlled Substance as a PA</fullName>
            </value>
            <value>
                <fullName>Application for Licensure as a PA</fullName>
            </value>
            <value>
                <fullName>APRN Protocol</fullName>
            </value>
            <value>
                <fullName>APRN Protocol Agreement</fullName>
            </value>
            <value>
                <fullName>APRN Protocol Agreement Information Form</fullName>
            </value>
            <value>
                <fullName>Back-up Supervising Physician(s) Form</fullName>
            </value>
            <value>
                <fullName>Backup Supervising Physician Application</fullName>
            </value>
            <value>
                <fullName>Basic Job Description Form</fullName>
            </value>
            <value>
                <fullName>Board Approval Email/Letter</fullName>
            </value>
            <value>
                <fullName>CAPA-CS</fullName>
            </value>
            <value>
                <fullName>CAPA-NS</fullName>
            </value>
            <value>
                <fullName>Certificate to Prescribe</fullName>
            </value>
            <value>
                <fullName>Chart Review</fullName>
            </value>
            <value>
                <fullName>Clinical Prac/Prescr Guide/Protocols</fullName>
            </value>
            <value>
                <fullName>Collaboration Information Form</fullName>
            </value>
            <value>
                <fullName>Collaborative Practice Agreement</fullName>
            </value>
            <value>
                <fullName>Collaborative Practice Agrmt Termination</fullName>
            </value>
            <value>
                <fullName>Collaborative Practice Protocol</fullName>
            </value>
            <value>
                <fullName>Colorado APRN/RXN Articulated Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>