knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Violation</fullName>
            </value>
            <value>
                <fullName>Compliance Warning</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>