knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/Max_Supervisions__c.field-meta.xml
<CustomField>
    <fullName>Max_Supervisions__c</fullName>
    <label>Max Supervisions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>