knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/PA_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>PA_Relationship_Status__c</fullName>
    <label>PA Relationship Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternate Collaborating Physician</fullName>
            </value>
            <value>
                <fullName>Alternate Supervising Physician</fullName>
            </value>
            <value>
                <fullName>Attending Physician</fullName>
            </value>
            <value>
                <fullName>Back-up Supervising Physician</fullName>
            </value>
            <value>
                <fullName>Collaborating Phys &amp; Resource Person</fullName>
            </value>
            <value>
                <fullName>Collaborating Physician</fullName>
            </value>
            <value>
                <fullName>Covering Physician</fullName>
            </value>
            <value>
                <fullName>Delegating Physician</fullName>
            </value>
            <value>
                <fullName>Designated Physician</fullName>
            </value>
            <value>
                <fullName>Locum Tenens Supervising Physician</fullName>
            </value>
            <value>
                <fullName>Not needed–NP/PA practice solo</fullName>
            </value>
            <value>
                <fullName>Not needed-practicing in hospital</fullName>
            </value>
            <value>
                <fullName>NP in Same Specialty</fullName>
            </value>
            <value>
                <fullName>Peer Physician</fullName>
            </value>
            <value>
                <fullName>Physician Refuses to Superv/Collab</fullName>
            </value>
            <value>
                <fullName>Primary Supervising Physician</fullName>
            </value>
            <value>
                <fullName>Responsible Physician</fullName>
            </value>
            <value>
                <fullName>Sponsoring Physician</fullName>
            </value>
            <value>
                <fullName>Substitute Supervising Physician</fullName>
            </value>
            <value>
                <fullName>Supervising Physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>