knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/Professional_Titles__c.field-meta.xml
<CustomField>
    <fullName>Professional_Titles__c</fullName>
    <label>Professional Titles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Professional_Title</valueSetName>
    </valueSet>
</CustomField>