knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/Rule_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rule_Effective_End_Date__c</fullName>
    <label>Rule Effective End Date</label>
    <type>Date</type>
</CustomField>