knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/fields/User_Overridable__c.field-meta.xml
<CustomField>
    <fullName>User_Overridable__c</fullName>
    <formula>ISPICKVAL(Exception_Type__c, &apos;Compliance Warning&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Overridable</label>
    <type>Checkbox</type>
</CustomField>