knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/recordTypes/Agreements_Required.recordType-meta.xml
<RecordType>
    <fullName>Agreements_Required</fullName>
    <active>true</active>
    <description>Apply this rule if a collaborative practice agreement (or equivalent) is required to practice.</description>
    <label>Agreements Required</label>
</RecordType>