knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/recordTypes/Practice_Wide_Relationship_Required.recordType-meta.xml
<RecordType>
    <fullName>Practice_Wide_Relationship_Required</fullName>
    <active>true</active>
    <description>Apply this rule if all nurse practitioners and/or physician assistants need to be linked to all physicians at the practicing location.</description>
    <label>Practice-Wide Relationship Required</label>
</RecordType>