knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Compliance_Rule_Assignments__c/recordTypes/Supervision_Set_Point.recordType-meta.xml
<RecordType>
    <fullName>Supervision_Set_Point</fullName>
    <active>true</active>
    <description>Apply this rule if there is a limit to the number of nurse practitioners and/or physician assistants a physician can supervise/collaborate with.</description>
    <label>Supervision Set Point</label>
</RecordType>